# BP3K

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
examples/: enum_type_example.cpp  signed_type_example.cpp  unsigned_type_example.cpp
include/: bp3k.h
tests/: CMakeLists.txt  bitpacker_tests.cpp  bp3k_tests.h  ibitpacker_tests.cpp  ubitpacker_tests.cpp
